<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="152dp"
        android:layout_height="164dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@mipmap/ic_launcher"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="53dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_nombre_fb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_profile">

        <EditText
            android:id="@+id/nombre_fb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/prompt_nombre"
            android:inputType="textPersonName|textCapWords"
            android:maxLines="1"
            android:text="Name" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_apellidos_fb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:ems="10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_nombre_fb">

        <EditText
            android:id="@+id/apellidos_fb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/prompt_apellidos"
            android:inputType="textPersonName|textCapWords"
            android:maxLines="1"
            android:text="Name" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_correo_electronico_fb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:ems="10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_apellidos_fb">


        <EditText
            android:id="@+id/correo_electronico_fb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/prompt_correo_electronico"
            android:inputType="textPersonName|textCapWords"
            android:maxLines="1"
            android:text="Name" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/label_a"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="476dp" />

    <Button
        android:id="@+id/label_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="476dp"
        android:layout_marginRight="-1dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/label_a"
        android:layout_marginBottom="0dp" />



</android.support.constraint.ConstraintLayout>